--- a/lib/bower.json
+++ b/lib/bower.json
@@ -1,9 +1,8 @@
 {
-  "name": "lib",
-  "version": "0.0.0",
-  "homepage": "https://github.com/andersonmcook/musichistory",
+  "name": "musichistory",
+  "version": "5.0.0",
   "authors": [
-    "Anderson Cook <andersonmcook@gmail.com>"
+    "NSS Student <student@nashvillesoftwareschool.com>"
   ],
   "license": "MIT",
   "ignore": [
@@ -14,8 +13,5 @@
     "tests"
   ],
   "dependencies": {
-    "bootstrap": "~3.3.5",
-    "jquery": "~2.1.4",
-    "requirejs": "~2.1.20"
   }
 }
