--- a/lib/bower.json
+++ b/lib/bower.json
@@ -13,6 +13,7 @@
     "tests"
   ],
   "dependencies": {
+    "firebase": "~2.3.1",
     "lodash": "~3.10.1",
     "require-handlebars-plugin": "~1.0.0"
   }
