--- a/lib/bower.json
+++ b/lib/bower.json
@@ -16,8 +16,9 @@
   "dependencies": {
     "angular": "~1.4.8",
     "angular-route": "~1.4.8",
+    "angularfire": "~1.1.3",
     "bootstrap": "~3.3.5",
-    "firebase": "~2.3.1",
+    "firebase": "~2.3.2",
     "jquery": "~2.1.4",
     "lodash": "~3.10.1",
     "q": "1.0.1",
