--- a/lib/bower.json
+++ b/lib/bower.json
@@ -23,6 +23,7 @@
     "lodash": "~3.10.1",
     "q": "1.0.1",
     "require-handlebars-plugin": "~1.0.0",
-    "requirejs": "~2.1.20"
+    "requirejs": "~2.1.20",
+    "angular-filter": "~0.5.8"
   }
 }
